--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-python-telegram-bot==20.3
-gspread==5.9.0
-oauth2client==4.1.3
-httpx~=0.24.0
+python-telegram-bot==20.8
+
+gspread==5.12.4
+google-auth==2.29.0
+
+httpx==0.24.1
+pytz==2024.1
+
+openpyxl==3.1.2
